<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="agency.nice.nearbypong.ui.result.ResultActivity">


    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/layout_margin"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_info_xlarge_size"
        app:layout_constraintBottom_toTopOf="@+id/description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="2 | 3" />

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_info_large_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:alpha="1"
        tools:text="@string/result_description_text_winner" />

    <agency.nice.nearbypong.widgets.Button
        android:id="@+id/playAgain"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:visibility="gone"
        app:borderSides="left|bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description"
        app:text="@string/button_play_again" />

    <agency.nice.nearbypong.widgets.Button
        android:id="@+id/quit"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:visibility="gone"
        app:borderSides="left|bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playAgain"
        app:text="@string/button_quit" />

</androidx.constraintlayout.widget.ConstraintLayout>
